fix for z-index to get map operational

--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ th {
 .content #map {
         width:100%;
         height:430px;
-        z-index: -3;
+        z-index: 500;
 }
 
 
